versions/v4.0.0/build/dts/api/bindings/ethernet/silabs,gecko-ethernet.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/build/dts/api/bindings/ethernet/silabs,gecko-ethernet.html
original_path: build/dts/api/bindings/ethernet/silabs,gecko-ethernet.html
---

# silabs,gecko-ethernet

Vendor: [Silicon Laboratories](../../bindings.md#dt-vendor-silabs)

Note

An implementation of a driver matching this compatible is available in
[drivers/ethernet/eth\_gecko.c](https://github.com/zephyrproject-rtos/zephyr/blob/main/drivers/ethernet/eth_gecko.c).

## Description

```text
SiLabs Gecko Ethernet
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `phy-address` | `int` | ```text address of the PHY on the MDIO bus ```  This property is **required**. |
| `location-rmii` | `int` | ```text location of RMII pins, configuration defined as <location> ```  This property is **required**. |
| `location-mdio` | `int` | ```text location of MDC and MDIO pins, configuration defined as <location> ```  This property is **required**. |
| `location-phy_mdc` | `array` | ```text PHY MDC individual pin configuration defined as <location port pin> ```  This property is **required**. |
| `location-phy_mdio` | `array` | ```text PHY MDIO individual pin configuration defined as <location port pin> ```  This property is **required**. |
| `location-rmii_refclk` | `array` | ```text Reference clock individual pin configuration defined as <location port pin> ```  This property is **required**. |
| `location-rmii_crs_dv` | `array` | ```text Receive data valid individual pin configuration defined as <location port pin> ```  This property is **required**. |
| `location-rmii_txd0` | `array` | ```text Transmit data 0 individual pin configuration defined as <location port pin> ```  This property is **required**. |
| `location-rmii_txd1` | `array` | ```text Transmit data 1 individual pin configuration defined as <location port pin> ```  This property is **required**. |
| `location-rmii_tx_en` | `array` | ```text Transmit enable individual pin configuration defined as <location port pin> ```  This property is **required**. |
| `location-rmii_rxd0` | `array` | ```text Receive data 0 individual pin configuration defined as <location port pin> ```  This property is **required**. |
| `location-rmii_rxd1` | `array` | ```text Receive data 1 individual pin configuration defined as <location port pin> ```  This property is **required**. |
| `location-rmii_rx_er` | `array` | ```text Receive error individual pin configuration defined as <location port pin> ```  This property is **required**. |
| `location-phy_pwr_enable` | `array` | ```text PHY power enable individual pin configuration defined as <port pin> ``` |
| `location-phy_reset` | `array` | ```text PHY reset individual pin configuration defined as <port pin> ``` |
| `location-phy_interrupt` | `array` | ```text PHY interrupt individual pin configuration defined as <port pin> ``` |
| `local-mac-address` | `uint8-array` | ```text Specifies the MAC address that was assigned to the network device ``` |
| `zephyr,random-mac-address` | `boolean` | ```text Use a random MAC address generated when the driver is initialized. Note that using this choice and rebooting a board may leave stale MAC address in peers' ARP caches and lead to issues and delays in communication.  (Use "ip neigh flush all" on Linux peers to clear ARP cache.)  It is driver specific how the OUI octets are handled.  If set we ignore any setting of the local-mac-address property. ``` |
| `phy-handle` | `phandle` | ```text Specifies a reference to a node representing a PHY device. ``` |
| `phy-connection-type` | `string` | ```text Specifies the interface connection type between ethernet MAC and PHY. ```  Legal values: `'mii'`, `'rmii'`, `'gmii'`, `'rgmii'` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “silabs,gecko-ethernet” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `reg` | `array` | ```text mmio register space ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts` | `array` | ```text required interrupts ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `power-domains` | `phandle-array` | ```text Power domain specifiers ``` |
| `power-domain-names` | `string-array` | ```text Provided names of power domain specifiers ``` |
| `#power-domain-cells` | `int` | ```text Number of cells in power-domains property ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
